--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
-### IntelliJ IDEA ###
+### Build and Compiled Files ###
+*.class
+*.jar
+*.war
+*.ear
+target/
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+bin/
+dist/
 
-### Eclipse ###
+### IDE - IntelliJ ###
+.idea/
+*.iml
+*.iws
+*.ipr
+
+### IDE - Eclipse ###
 .apt_generated
 .classpath
 .factorypath
@@ -11,19 +22,32 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
-### NetBeans ###
+### IDE - NetBeans ###
 /nbproject/private/
 /nbbuild/
-/dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
+### IDE - VS Code ###
 .vscode/
 
-### Mac OS ###
+### Maven Specific ###
+!.mvn/wrapper/maven-wrapper.jar
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+### OS Specific ###
 .DS_Store
+
+### Keep Source Files ###
+!**/src/main/**/out/
+!**/src/test/**/out/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
